[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["resource*"]

[tool.setuptools.package-data]
"betfsm" = ["frontend/*"]

[project]
name = "betfsm"
authors=[{name = "Erwin Aertbeliën", email="Erwin.Aertbelien@kuleuven.be"}]
version = "1.0.0"
description = "BeTFSM is a library for ticking statemachines and behavior trees. In this unified framework, discrete tasks can be specified with the modularity of behavior trees and at the lower-level precise interaction can be specified using state machines. It targets discrete coordination of robotic systems at both high- and low level."

dependencies = [
    "colorama",
    "websockets",
    "fastapi",
    "uvicorn"
]

[project.urls]
homepage="https://crospi-website-907f83.pages.gitlab.kuleuven.be/"
documentation="https://betfsm-90d316.pages.gitlab.kuleuven.be/"
repository="https://github.com/Robotics-Research-Group-KUL/betfsm"

[project.scripts]
betfsm_example_concurrentseq = "betfsm_examples.example_concurrentseq:main"
example_sequence1     = "betfsm_examples.example_sequence1:main"  
example_sequence2     = "betfsm_examples.example_sequence2:main"  
example_sequence3     = "betfsm_examples.example_sequence3:main"  
example_statemachine  = "betfsm_examples.example_statemachine:main"  
gui_example_simple1   = "betfsm_examples.guiexample_simple1:main" 
gui_example_simple2   = "betfsm_examples.guiexample_simple2:main" 
gui_example_large     = "betfsm_examples.guiexample_large:main" 
example_common_nodes  = "betfsm_examples.example_common_nodes:main"
example_logging       = "betfsm_examples.example_logging:main"


