<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>betfsm_demos</name>
  <version>0.0.0</version>
  <description>tutorial scripts for BeTFSM</description>
  <maintainer email="Erwin.Aertbelien@kuleuven.be">Erwin Aertbeliën</maintainer>
  <license>LGPL-3.0-only</license>

  <depend>betfsm_interfaces</depend>
  <depend>betfsm</depend>
  <depend>etasl_ros2</depend>
  <depend>etasl_ros2_application_template</depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
