<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>betfsm_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for BeTFSM</description>
  <maintainer email="your@email.com">Erwin</maintainer>
  <license>LGPL-3.0-only</license>

  <buildtool_depend>setuptools</buildtool_depend>

  <!-- Dependency on your other package -->
  <exec_depend>betfsm</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
